--- a/phpci.yml
+++ b/phpci.yml
@@ -20,7 +20,7 @@ setup:
 test:
     php_unit:
         directory: "test/unit/"
-        args: "--bootstrap 'test/bootstrap.php' --configuration 'test/phpunit.xml'"
+        args: "--bootstrap 'test/bootstrap.php'"
     php_mess_detector:
         allow_failures: true
     php_cpd:
